export const snapshot = {};

snapshot[`jsx 1`] = `
[
  [
    12,
    "div",
  ],
  [
    13,
    "div",
  ],
]
`;

snapshot[`jsx - attributes 1`] = `
[
  [
    12,
    "div",
  ],
  [
    14,
    "style",
  ],
  [
    9,
    {
      color: "red",
    },
  ],
  [
    14,
    "id",
  ],
  [
    5,
    "my-cool-div",
  ],
  [
    13,
    "div",
  ],
]
`;

snapshot[`jsx - children 1`] = `
[
  [
    12,
    "ul",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #1",
  ],
  [
    13,
    "li",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #2",
  ],
  [
    13,
    "li",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #3",
  ],
  [
    13,
    "li",
  ],
  [
    13,
    "ul",
  ],
]
`;

snapshot[`jsx - mapped children 1`] = `
[
  [
    12,
    "ul",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #1",
  ],
  [
    13,
    "li",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #2",
  ],
  [
    13,
    "li",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #3",
  ],
  [
    13,
    "li",
  ],
  [
    13,
    "ul",
  ],
]
`;

snapshot[`jsx - children + attributes 1`] = `
[
  [
    12,
    "ul",
  ],
  [
    14,
    "id",
  ],
  [
    5,
    "main",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "class",
  ],
  [
    5,
    "selected",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #1",
  ],
  [
    13,
    "li",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #2",
  ],
  [
    13,
    "li",
  ],
  [
    12,
    "li",
  ],
  [
    14,
    "disabled",
  ],
  [
    4,
    true,
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Child #3",
  ],
  [
    13,
    "li",
  ],
  [
    13,
    "ul",
  ],
]
`;

snapshot[`jsx - nested children 1`] = `
[
  [
    12,
    "div",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "div",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "div",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "div",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "div",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello, World!",
  ],
  [
    13,
    "div",
  ],
  [
    13,
    "div",
  ],
  [
    13,
    "div",
  ],
  [
    13,
    "div",
  ],
  [
    13,
    "div",
  ],
]
`;

snapshot[`jsx - nested children + attributes 1`] = `
[
  [
    12,
    "div",
  ],
  [
    14,
    "id",
  ],
  [
    5,
    "1",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "div",
  ],
  [
    14,
    "id",
  ],
  [
    5,
    "2",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "div",
  ],
  [
    14,
    "id",
  ],
  [
    5,
    "3",
  ],
  [
    14,
    "onClick",
  ],
  [
    10,
    [Function: onClick],
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "div",
  ],
  [
    14,
    "id",
  ],
  [
    5,
    "4",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "div",
  ],
  [
    14,
    "id",
  ],
  [
    5,
    "5",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello, World!",
  ],
  [
    13,
    "div",
  ],
  [
    13,
    "div",
  ],
  [
    13,
    "div",
  ],
  [
    13,
    "div",
  ],
  [
    13,
    "div",
  ],
]
`;

snapshot[`jsx - fragment 1`] = `
[
  [
    12,
    "[[FRAGMENT]]",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    12,
    "span",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello #1",
  ],
  [
    13,
    "span",
  ],
  [
    12,
    "span",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello #2",
  ],
  [
    13,
    "span",
  ],
  [
    13,
    "[[FRAGMENT]]",
  ],
]
`;

snapshot[`jsx - custom element 1`] = `
[
  [
    12,
    "div",
  ],
  [
    14,
    "[[CHILDREN]]",
  ],
  [
    5,
    "Hello, Daniel!",
  ],
  [
    13,
    "div",
  ],
]
`;
